--- a/public/style.css
+++ b/public/style.css
@@ -223,7 +223,7 @@ body {
     transition: 0.3s;
     width: 20%;
     min-width: 300px;
-    margin-bottom: 40px;
+    margin: 20px;
 }
 
 .card:hover {
